# HappyCustomersAI

./: .gitignore  DEPLOYMENT.md  README.md  cloudbuild.yaml  pyproject.toml  sample_reviews.csv
backend/: DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  env.example  generate_graph.py  pyproject.toml  requirements.txt  service.yaml
backend/app/: database.py  main.py
backend/app/agents/: __init__.py  review_agent.py
backend/app/controllers/: analytics_controller.py  email_controller.py  health_controller.py  reviews_controller.py
backend/app/core/: config.py
backend/app/models/: review.py
backend/app/routes/: __init__.py  analytics.py  email.py  health.py  reviews.py
backend/app/services/: __init__.py  email_service.py  file_service.py  review_service.py
frontend/: app.py
