[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedback-ai-backend"
version = "0.1.0"
description = "AI-powered customer feedback management system backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.10",
    "pydantic",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    # AI and LangGraph dependencies
    "langchain==0.1.0",
    "langchain-google-genai==0.0.6",
    "langgraph==0.0.20",
    "langchain-community==0.0.10",
    "google-generativeai==0.3.2",
    # Email and communication
    "aiosmtplib==3.0.1",
    "jinja2==3.1.2",
    "emails==0.6.0",
    # HTTP client
    "httpx==0.25.2",
    "aiofiles==23.2.1",
    # Database and caching
    "redis==5.0.1",
    "asyncpg==0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["app"] 